# ltl2ba

./: .gitignore  .ocamlformat  Makefile  README.md  codecov.yml  dune  dune-project  index.html  ltl2ba.opam
.github/workflows/: build.yml  coverage.yml
docs/: index.html  odoc.html  pUqBien.dot  puqNul.dot  report.md  slides.md
docs/ltl2ba/: index.html
ltl2ba/: core.html  index.html  parser.html
ltl2ba/Cli/: index.html
ltl2ba/Core/: index.html
ltl2ba/Core/Algorithm/: index.html
ltl2ba/Core/Algorithm/Label/: index.html
ltl2ba/Core/Algorithm/TransitionGraph/: index.html
ltl2ba/Core/Algorithm/TransitionGraph/E/: index.html
ltl2ba/Core/Algorithm/TransitionGraph/FormulaSetLabel/: index.html
ltl2ba/Core/Automata/: index.html
ltl2ba/Core/Automata/TransBuchi/: index.html
ltl2ba/Core/Automata/TransBuchi/E/: index.html
ltl2ba/Core/Automata/TransBuchi/V/: index.html
ltl2ba/Core/Automata/TransBuchiDotPrinter/: index.html
ltl2ba/Core/Ltl/: index.html
ltl2ba/Ltl/: index.html
ltl2ba/Ltl/Formula/: index.html
src/: cli.ml  dune  index.mld  ltl2ba.ml  main.ml
src/core/: algorithm.ml  algorithm.mli  automata.ml  automata.mli  bisect.exclude  core.mld  dune  index.mld  ltl.ml  ltl.mli
src/ltl/: dune  ltl.ml  ltl.mli
src/parsing/: ast.ml  dune  lexer.mll  parser.mld  parser.mly
tests/: dune  test_algorithm.ml  test_core.ml  test_ltl.ml  test_ltl2ba.ml  test_ltl_parser.ml  test_utils.ml
