(library
  (name cli)
  (modules cli)
  (public_name ltl2ba.cli)
  (libraries ANSITerminal cmdliner))

(executable
 (name ltl2ba)
 (modules (:standard \ cli))
 (public_name ltl2ba)
 (libraries cli parsing core )
 (package ltl2ba))

(documentation
 (package ltl2ba)
 (mld_files index))

(env
  (dev
    (flags (:standard -w -66))))
